Archive2/b6/72e604d8c0a6c8/output
In file included from /usr/local/include/c++/4.9.2/thread:39:0,
                 from main.cpp:3:
/usr/local/include/c++/4.9.2/functional: In instantiation of 'struct std::_Bind_simple<void (*(std::basic_istringstream<char>*, std::basic_string<char>))(std::basic_istream<char>*, std::basic_string<char>&)>':
/usr/local/include/c++/4.9.2/thread:137:47:   required from 'std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = void (&)(std::basic_istream<char>*, std::basic_string<char>&); _Args = {std::basic_istringstream<char, std::char_traits<char>, std::allocator<char> >*, std::basic_string<char, std::char_traits<char>, std::allocator<char> >&}]'
main.cpp:17:35:   required from here
/usr/local/include/c++/4.9.2/functional:1665:61: error: no type named 'type' in 'class std::result_of<void (*(std::basic_istringstream<char>*, std::basic_string<char>))(std::basic_istream<char>*, std::basic_string<char>&)>'
       typedef typename result_of<_Callable(_Args...)>::type result_type;
                                                             ^
/usr/local/include/c++/4.9.2/functional:1695:9: error: no type named 'type' in 'class std::result_of<void (*(std::basic_istringstream<char>*, std::basic_string<char>))(std::basic_istream<char>*, std::basic_string<char>&)>'
         _M_invoke(_Index_tuple<_Indices...>)
         ^
